--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,10 @@
-version: "3"
-
 services:
-  next-app:
-    build:
-      context: ./next-app
-      dockerfile: prod.Dockerfile
-      args:
-        ENV_VARIABLE: ${ENV_VARIABLE}
-        NEXT_PUBLIC_ENV_VARIABLE: ${NEXT_PUBLIC_ENV_VARIABLE}
-    restart: always
+  monica-proxy:
+    image: neccen/monica-proxy:latest
+    container_name: monica-proxy
+    restart: unless-stopped
     ports:
-      - 3000
-    networks:
-      - dokploy-network
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.next-app.rule=Host(`next-app.dokploy.com`)
-      - traefik.http.routers.next-app.entrypoints=websecure
-      - traefik.http.routers.next-app.tls.certResolver=letsencrypt
-      - traefik.http.services.next-app.loadbalancer.server.port=3000
-  # Add more containers below (nginx, postgres, etc.)
-# Define a network, which allows containers to communicate
-# with each other, by using their container name as a hostname
-networks:
-  dokploy-network:
-    external: true
+      - "8080:8080"
+    environment:
+      - MONICA_COOKIE="session_id=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpYXQiOjE3NDA3NTY0MDUsImlzcyI6Im1vbmljYSIsInVzZXJfaWQiOjc3MjA1NjY2LCJ1c2VyX25hbWUiOiJ2YnEiLCJqdGkiOiIxYTEwMDFiMDY5Y2E0OWRlYjZhYjk0ZDA3NTJjMjQwZiIsImNsaWVudF90eXBlIjoid2ViIn0.-bgBxiSWUiqlg-D_R5-nvaLO1h1BKqyIRMiE7LqZjdE"
+      - BEARER_TOKEN="sk-jcjbxrmvstobdscbemclnzuysmtfcyzssqrtfkhreouumylc"
